@@ -2263,6 +2263,22 @@ name|getLatestSchema
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|searcher
+operator|.
+name|decorateDocValueFields
+argument_list|(
+name|sid
+argument_list|,
+name|docid
+argument_list|,
+name|searcher
+operator|.
+name|getNonStoredDVs
+argument_list|(
+literal|false
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 finally|finally
@@ -2351,11 +2367,19 @@ condition|)
 block|{
 if|if
 condition|(
+operator|(
+operator|!
+name|sf
+operator|.
+name|hasDocValues
+argument_list|()
+operator|&&
 operator|!
 name|sf
 operator|.
 name|stored
 argument_list|()
+operator|)
 operator|||
 name|schema
 operator|.
