@@ -7505,6 +7505,384 @@ block|}
 block|}
 annotation|@
 name|Test
+DECL|method|testAtomicUpdatesOnNonStoredDocValues
+specifier|public
+name|void
+name|testAtomicUpdatesOnNonStoredDocValues
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+name|sdoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|2
+argument_list|,
+literal|"title"
+argument_list|,
+literal|"title2"
+argument_list|,
+literal|"single_i_dvo"
+argument_list|,
+literal|100
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+name|sdoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|3
+argument_list|,
+literal|"title"
+argument_list|,
+literal|"title3"
+argument_list|,
+literal|"single_d_dvo"
+argument_list|,
+literal|3.14
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+name|sdoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|4
+argument_list|,
+literal|"single_s_dvo"
+argument_list|,
+literal|"abc"
+argument_list|,
+literal|"single_i_dvo"
+argument_list|,
+literal|1
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|commit
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+name|sdoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|2
+argument_list|,
+literal|"title"
+argument_list|,
+name|ImmutableMap
+operator|.
+name|of
+argument_list|(
+literal|"set"
+argument_list|,
+literal|"newtitle2"
+argument_list|)
+argument_list|,
+literal|"single_i_dvo"
+argument_list|,
+name|ImmutableMap
+operator|.
+name|of
+argument_list|(
+literal|"inc"
+argument_list|,
+literal|1
+argument_list|)
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+name|sdoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|3
+argument_list|,
+literal|"title"
+argument_list|,
+name|ImmutableMap
+operator|.
+name|of
+argument_list|(
+literal|"set"
+argument_list|,
+literal|"newtitle3"
+argument_list|)
+argument_list|,
+literal|"single_d_dvo"
+argument_list|,
+name|ImmutableMap
+operator|.
+name|of
+argument_list|(
+literal|"inc"
+argument_list|,
+literal|1
+argument_list|)
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+name|sdoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|4
+argument_list|,
+literal|"single_i_dvo"
+argument_list|,
+name|ImmutableMap
+operator|.
+name|of
+argument_list|(
+literal|"inc"
+argument_list|,
+literal|1
+argument_list|)
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|commit
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertJQ
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"id:2"
+argument_list|)
+argument_list|,
+literal|"/response/docs/[0]/id==2"
+argument_list|,
+literal|"/response/docs/[0]/title/[0]=='newtitle2'"
+argument_list|,
+literal|"/response/docs/[0]/single_i_dvo==101"
+argument_list|)
+expr_stmt|;
+name|assertJQ
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"id:3"
+argument_list|)
+argument_list|,
+literal|1e-4
+argument_list|,
+literal|"/response/docs/[0]/id==3"
+argument_list|,
+literal|"/response/docs/[0]/title/[0]=='newtitle3'"
+argument_list|,
+literal|"/response/docs/[0]/single_d_dvo==4.14"
+argument_list|)
+expr_stmt|;
+name|assertJQ
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"id:4"
+argument_list|)
+argument_list|,
+literal|1e-4
+argument_list|,
+literal|"/response/docs/[0]/id==4"
+argument_list|,
+literal|"/response/docs/[0]/single_s_dvo=='abc'"
+argument_list|,
+literal|"/response/docs/[0]/single_i_dvo==2"
+argument_list|)
+expr_stmt|;
+comment|// test that non stored docvalues was carried forward for a non-docvalue update
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+name|sdoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|3
+argument_list|,
+literal|"title"
+argument_list|,
+name|ImmutableMap
+operator|.
+name|of
+argument_list|(
+literal|"set"
+argument_list|,
+literal|"newertitle3"
+argument_list|)
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|commit
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertJQ
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"id:3"
+argument_list|)
+argument_list|,
+literal|1e-4
+argument_list|,
+literal|"/response/docs/[0]/id==3"
+argument_list|,
+literal|"/response/docs/[0]/title/[0]=='newertitle3'"
+argument_list|,
+literal|"/response/docs/[0]/single_d_dvo==4.14"
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testAtomicUpdatesOnNonStoredDocValuesMulti
+specifier|public
+name|void
+name|testAtomicUpdatesOnNonStoredDocValuesMulti
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+name|sdoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|1
+argument_list|,
+literal|"title"
+argument_list|,
+literal|"title1"
+argument_list|,
+literal|"multi_ii_dvo"
+argument_list|,
+literal|100
+argument_list|,
+literal|"multi_ii_dvo"
+argument_list|,
+name|Integer
+operator|.
+name|MAX_VALUE
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|commit
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+name|sdoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|1
+argument_list|,
+literal|"title"
+argument_list|,
+name|ImmutableMap
+operator|.
+name|of
+argument_list|(
+literal|"set"
+argument_list|,
+literal|"newtitle1"
+argument_list|)
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|commit
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// test that non stored multivalued docvalues was carried forward for a non docvalues update
+name|assertJQ
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"id:1"
+argument_list|)
+argument_list|,
+literal|"/response/docs/[0]/id==1"
+argument_list|,
+literal|"/response/docs/[0]/title/[0]=='newtitle1'"
+argument_list|,
+literal|"/response/docs/[0]/multi_ii_dvo/[0]==100"
+argument_list|,
+literal|"/response/docs/[0]/multi_ii_dvo/[1]=="
+operator|+
+name|Integer
+operator|.
+name|MAX_VALUE
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
 DECL|method|testInvalidOperation
 specifier|public
 name|void
